--- a/front_end/sidebarPane.css
+++ b/front_end/sidebarPane.css
@@ -200,8 +200,8 @@
     background-position: 0 0;
     position: absolute;
     height: 16px;
-    width: 22px;
-    right: 0px;
+    width: 23px;
+    right: 10px;
     bottom: 1px;
     visibility: hidden;
 }
